<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/scrollview_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/linear_layout_padding_horizontal"
        android:paddingVertical="@dimen/linear_layout_padding_vertical">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:layout_marginBottom="@dimen/profile_image_margin_bottom"
            android:background="@drawable/avatar_image_placeholder"
            android:padding="@dimen/profile_image_padding"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/changePhotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/change_photo_btn_margin_bottom"
            android:backgroundTint="@color/button_blue"
            android:elevation="@dimen/button_elevation"
            android:text="@string/change_photo"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/nicknameEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginBottom="@dimen/nickname_margin_bottom"
            android:autofillHints=""
            android:background="@drawable/rounded_input"
            android:hint="@string/nickname"
            android:inputType="text"
            android:paddingHorizontal="@dimen/edittext_padding_horizontal" />

        <EditText
            android:id="@+id/professionEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginBottom="@dimen/profession_margin_bottom"
            android:autofillHints=""
            android:background="@drawable/rounded_input"
            android:hint="@string/profession"
            android:inputType="text"
            android:paddingHorizontal="@dimen/edittext_padding_horizontal" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_blue"
            android:elevation="@dimen/button_elevation"
            android:text="@string/save"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
