<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:id="@+id/toolbarContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#3F51B5"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/toolbar_content_padding_start"
                    android:paddingEnd="@dimen/toolbar_content_padding_end">

                    <ImageView
                        android:id="@+id/backArrow"
                        android:layout_width="@dimen/toolbar_back_arrow_size"
                        android:layout_height="@dimen/toolbar_back_arrow_size"
                        android:layout_marginEnd="@dimen/toolbar_back_arrow_margin_end"
                        android:src="@drawable/ic_arrow_back"
                        app:tint="@android:color/white" />

                    <LinearLayout
                        android:id="@+id/userNameRoleContainer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/userNameText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_name_default"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_large"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/userRoleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_role_default"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/profileLogo"
                        android:layout_width="@dimen/profile_logo_size"
                        android:layout_height="@dimen/profile_logo_size"
                        android:layout_marginStart="@dimen/profile_logo_margin_start"
                        android:contentDescription="@string/profile_logo_description"
                        android:scaleType="centerCrop"
                        android:src="@drawable/avatar_image_placeholder" />
                </LinearLayout>

            </FrameLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/messages_recycler_margin_bottom"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:padding="@dimen/messages_recycler_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <androidx.cardview.widget.CardView
        android:id="@+id/messageInputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/message_input_container_margin"
        android:backgroundTint="@android:color/white"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/message_input_padding_start"
            android:paddingEnd="@dimen/message_input_padding_end">

            <EditText
                android:id="@+id/messageInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/message_input_hint"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:minHeight="@dimen/message_input_min_height"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_medium" />

            <ImageButton
                android:id="@+id/sendButton"
                android:layout_width="@dimen/send_button_size"
                android:layout_height="@dimen/send_button_size"
                android:background="@android:color/transparent"
                android:contentDescription="@string/send_button_description"
                android:src="@drawable/send"
                app:tint="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
